# colibri-amd

./: .clang-format  .editorconfig  README.md  flake.nix  pyproject.toml
.github/workflows/: release.yml
c/: Makefile  backend_cuda.cu  backend_cuda.h  backend_gpu_compat.h  backend_loader.c  coli  colibri.c  glm.c  hip_debug.h  setup.sh  st.h
c/tests/: bench_dsa_select.c  test_benchmark_cuda_fixture.py  test_ragged_attention.cu  test_sample_nan.c
c/tools/: benchmark_cuda_fixture.py  convert_fp8_to_int4.py  layer_diff.py
c/tools/expert_atlas/: README.md  analyze.py
colibri/: __init__.py  _version.py  cli.py
docs/: HIP-KNOWN-BUGS.md  HIP-SETUP.md  api.md  quickstart.md  windows.md
